feat: add filters to search data